--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-It's a simple distributed database. RM is resource manager, and it achieve a simple database.
+这是一个非常简单的分布式旅行预订系统的DBMS，是作为“分布式数据库”这门课程的结课实验。
+该系统主要是为了实现2PC（Two Phase Commitment Protocol）、2PL（Two Phase Locking Protocol）协议而设计的。所以在局部管理系统方面功能非常简单，没有实现对SQL语言的支持。而是通过add、delete、updata函数实现对表的增加、删除、修改操作。
+该项目中共计有5张表，分别为FLIGHTS，HOTELS，CARS，CUSTOMERS，RESERVATIONS。
